improve model accuracy

--- a/trainLSTM.ipynb
+++ b/trainLSTM.ipynb
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "11a646ac",
+   "id": "b596eb17",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "61eab9fd",
+   "id": "2c210bd6",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "6c90cb51",
+   "id": "77da9bdd",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "10b2d138",
+   "id": "281975c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "119ffd87",
+   "id": "d2778440",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "d67ebabb",
+   "id": "41bdb473",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "4946ef58",
+   "id": "3fa5f95c",
    "metadata": {
     "scrolled": true
    },
@@ -1009,52 +1009,7 @@
     "    X_train,\n",
     "    y_train,\n",
     "    batch_size=16,\n",
-    "    epochs=40,\n",
-    "    validation_data=(X_val, y_val),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "a216903e",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "48/48 [==============================] - 2s 39ms/step - loss: 1.9126e-04 - val_loss: 0.0017\n",
-      "Epoch 2/10\n",
-      "48/48 [==============================] - 2s 37ms/step - loss: 2.6441e-04 - val_loss: 3.3879e-04\n",
-      "Epoch 3/10\n",
-      "48/48 [==============================] - 2s 38ms/step - loss: 1.8958e-04 - val_loss: 5.4048e-04\n",
-      "Epoch 4/10\n",
-      "48/48 [==============================] - 2s 37ms/step - loss: 1.6695e-04 - val_loss: 6.1151e-04\n",
-      "Epoch 5/10\n",
-      "48/48 [==============================] - 2s 37ms/step - loss: 1.5919e-04 - val_loss: 2.6686e-04\n",
-      "Epoch 6/10\n",
-      "48/48 [==============================] - 2s 37ms/step - loss: 1.4743e-04 - val_loss: 1.9065e-04\n",
-      "Epoch 7/10\n",
-      "48/48 [==============================] - 2s 45ms/step - loss: 1.9401e-04 - val_loss: 1.9150e-04\n",
-      "Epoch 8/10\n",
-      "48/48 [==============================] - 3s 61ms/step - loss: 1.5202e-04 - val_loss: 5.2830e-04\n",
-      "Epoch 9/10\n",
-      "48/48 [==============================] - 3s 61ms/step - loss: 1.5283e-04 - val_loss: 5.7889e-04\n",
-      "Epoch 10/10\n",
-      "48/48 [==============================] - 3s 60ms/step - loss: 1.5887e-04 - val_loss: 6.5557e-04\n"
-     ]
-    }
-   ],
-   "source": [
-    "history2 = model.fit(\n",
-    "    X_train,\n",
-    "    y_train,\n",
-    "    batch_size=16,\n",
-    "    epochs=10,\n",
+    "    epochs=50,\n",
     "    validation_data=(X_val, y_val),\n",
     ")"
    ]
@@ -1062,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "e8e41a0d",
+   "id": "945564bc",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "07e03ed6",
+   "id": "c4038c10",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "b34debbc",
+   "id": "55cbd56e",
    "metadata": {},
    "outputs": [
     {
@@ -1139,6 +1094,44 @@
    "source": [
     "plt.plot(scaler.inverse_transform(y_test.reshape(-1, 1)))\n",
     "plt.plot(y_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "ec64f961",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found untraced functions such as lstm_cell_23_layer_call_fn, lstm_cell_23_layer_call_and_return_conditional_losses, lstm_cell_24_layer_call_fn, lstm_cell_24_layer_call_and_return_conditional_losses while saving (showing 4 of 4). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ram://3327a0c3-20c7-44f6-a009-aaee557a71fb/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ram://3327a0c3-20c7-44f6-a009-aaee557a71fb/assets\n",
+      "WARNING:absl:<keras.layers.recurrent.LSTMCell object at 0x000001F88E6E89D0> has the same name 'LSTMCell' as a built-in Keras object. Consider renaming <class 'keras.layers.recurrent.LSTMCell'> to avoid naming conflicts when loading with `tf.keras.models.load_model`. If renaming is not possible, pass the object in the `custom_objects` parameter of the load function.\n",
+      "WARNING:absl:<keras.layers.recurrent.LSTMCell object at 0x000001F8A384A950> has the same name 'LSTMCell' as a built-in Keras object. Consider renaming <class 'keras.layers.recurrent.LSTMCell'> to avoid naming conflicts when loading with `tf.keras.models.load_model`. If renaming is not possible, pass the object in the `custom_objects` parameter of the load function.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('testmodel.pkl', 'wb') as f:\n",
+    "    pickle.dump(model, f)\n",
+    "f.close()"
    ]
   }
  ],
