--- a/trainLSTMGranular.ipynb
+++ b/trainLSTMGranular.ipynb
@@ -24,8 +24,7 @@
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
-    "import yfinance as yf\n",
-    "import yahoo_fin"
+    "import yfinance as yf"
    ]
   },
   {
