test five stocks

--- a/trainLSTMGranular.ipynb
+++ b/trainLSTMGranular.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "78fec3a7",
+   "id": "bccb91d0",
    "metadata": {},
    "source": [
     "## 1. Import Libraries"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f0fdcc5",
+   "id": "35447878",
    "metadata": {},
    "source": [
     "## 2. Load Stock Data"
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "480ba8f7",
+   "id": "352503f7",
    "metadata": {},
    "source": [
     "## 3. Perform Data Preprocessing"
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "eaf86e59",
+   "id": "13aaa860",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45068c5b",
+   "id": "1d0d1aad",
    "metadata": {},
    "source": [
     "## Train Model"
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46452629",
+   "id": "e5b7cd8e",
    "metadata": {},
    "source": [
     "### Approach 1: Train model twice\n",
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e0d3fcf",
+   "id": "732fcf66",
    "metadata": {},
    "source": [
     "### Approach 2: Train on both stocks at once"
@@ -935,6 +935,27 @@
     "    tf.keras.layers.Dense(1))\n",
     ")\n",
     "model_combined.compile(loss='mean_squared_error', optimizer='adam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d840a54c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5962, 60)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate((X_train_aapl, X_train_msft)).shape"
    ]
   },
   {
@@ -1045,8 +1066,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a23359b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
-   "id": "0af1a494",
+   "id": "95cb8d13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "356db12d",
+   "id": "35b2e02f",
    "metadata": {},
    "outputs": [
     {
